[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nightmare-common = { path = "../common" }

actix = "0.13.1"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
cargo-watch = "8.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.3", features = ["serde"] }
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
utoipa = { version = "4.0.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
reqwest = { version = "0.11.22", features = ["multipart"] }
